--- a/templates/search.html
+++ b/templates/search.html
@@ -72,6 +72,9 @@
             padding-bottom: 20px;
 
         }
+        #cap{
+            text-transform: capitalize;
+        }
 
     </style>
 </head>
@@ -79,8 +82,10 @@
     <div class="container">
         <div class="row">
             <div class="col-sm">
-                <h1>Search Results</h1>
-            </div>
+                <h1>News about 
+                    <span class="text-primary" id="cap">{{ keyword }}</span>
+            </h1>            
+        </div>
         </div>
         <div class="row">
             <!--loop through the search results-->
