--- a/templates/category.html
+++ b/templates/category.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quick News</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/category_style.css')}}">
 
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{{url_for('getNews')}}">Quick News</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="{{url_for('getNews')}}">Quick News</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{{url_for('getNews')}}">Home</a>
+                <a class="nav-link" aria-current="page" href="{{url_for('getNews')}}">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="
@@ -75,9 +75,7 @@
                     {{url_for('categoryNews',name='technology')}}
                     {% else %}
                     {{url_for('categoryNews',name='technology')}}
-                    {% endif %}
-                    
-                    ">Technology</a>
+                    {% endif %}">Technology</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="
@@ -85,40 +83,32 @@
                     {{url_for('categoryNews',name='science')}}
                     {% else %}
                     {{url_for('categoryNews',name='science')}}
-                    {% endif %}
-                    
-                    ">Science</a>
+                    {% endif %}">Science</a>
                 </li>
             </ul>
             </div>
         </div>
         </nav>
     <div class="container">
-        <h1>Quick News</h1>
-        <p>Get the latest news from the world</p>
-        <br>
-        <form action="/search" method="POST">
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Search for news" name="query">
-                <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Search</button>
-            </div>
-
         <div class="row">
-            {% for article in articles %}
+            {% for article in category_articles %}
+            {% if article.urlToImage %}
             <div class="col-lg-3 col-sm">
                 <div class="card">
+                    <img src="{{article.urlToImage}}" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <img src="{{ article.urlToImage }}" class="card-img-top" alt="...">
-                        <h5 class="card-title">{{ article.title }}</h5>
-                        <p class="card-text">{{ article.description }}</p>
-                        <a href="{{ article.url }}" class="btn btn-primary">Read More</a>
-                        </div>
-                        </div>
-                        </div>
-                        {% endfor %}
+                        <h5 class="card-title">{{article.title}}</h5>
+                        <p class="card-text">{{article.description}}</p>
+                        <a href="{{article.url}}" class="btn btn-primary">Read More</a>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+            
+            {% endfor %}
         </div>
-    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
