--- a/static/css/category_style.css
+++ b/static/css/category_style.css
@@ -4,6 +4,7 @@
 .card{
     margin-bottom: 20px;
 }
+/* add more style to the card */
 .card-body{
     padding: 20px;
 }
@@ -26,10 +27,12 @@
     background-color: #ffffff;
     color: #212529;
 }
+/*make the height of the card equal to the height of the image*/
 .card-img-top{
     height: 200px;
     object-fit: cover;
 }
+/*make  cards align equal height */
 .row{
     display: flex;
     flex-wrap: wrap;
@@ -51,68 +54,20 @@
 @media (min-width: 992px){
     .col-sm{
         flex: 0 0 33.333333%;
-        max-width: 33.333333%;
+        max-width: 33.333333%; 
     }
 }
-/*make the h1 tag center */
-h1{
-    text-align: center;
-}
-p{
-    text-align: center;
-}
-
-h1{
-    font-size: 50px;
-    font-weight: bold;
-    color: #212529;
-}
-p{
-    font-size: 20px;
-    font-weight: 500;
-    color: #212529;
-}
-.form-control{
-    border: none;
-    border-radius: 0;
-    border-bottom: 1px solid #212529;
-}
-.form-control:focus{
-    box-shadow: none;
-    border-bottom: 1px solid #212529;
-}
-.btn-outline-secondary{
-    border: none;
-    border-radius: 0;
-    background-color: #212529;
-    color: #ffffff;
-}
-.btn-outline-secondary:hover{
-    background-color: #ffffff;
-    color: #212529;
-}
-/*make the search bar center */
-.input-group{
-    margin: 0 auto;
-    width: 50%;
-}
-/*make the search bar responsive */
-@media (max-width: 768px){
-    .input-group{
-        width: 100%;
+/* @media (min-width: 1200px){
+    .col-sm{
+        flex: 0 0 25%;
+        max-width: 25%; 
     }
-}
-/*give some space between the search bar and the cards */
-.row{
-    margin-top: 50px;
-}
-/*make the navbar responsive */
+} */
 @media (max-width: 768px){
     .navbar-nav{
         flex-direction: column;
     }
 }
-/*make the navabr like google news */
 .navbar{
     padding: 0 20px;
 }
